--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,210 @@
-streamlit
-plotly
-streamlit-echarts
-cython
-wheel
-pandas
-numpy
-scipy
-sqlalchemy
-psycopg2-binary
-openpyxl
-matplotlib
-geopandas
-cachetools
-seaborn
-statsmodels
+absl-py==1.2.0
+affine==2.3.1
+appnope==0.1.3
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+arviz==0.11.4
+astor==0.8.1
+asttokens==2.0.8
+astunparse==1.6.3
+attrs==22.1.0
+autograd==1.4
+autograd-gamma==0.5.0
+backcall==0.2.0
+bcrypt==4.0.0
+beautifulsoup4==4.11.1
+bleach==5.0.1
+brotlipy==0.7.0
+CacheControl==0.12.11
+cachetools==5.2.0
+cachy==0.3.0
+certifi==2022.9.24
+cffi==1.15.0
+cftime==1.6.1
+charset-normalizer==2.0.11
+cleo==0.8.1
+click==8.1.3
+click-plugins==1.1.1
+cligj==0.7.2
+clikit==0.6.2
+colorama==0.4.4
+commonmark==0.9.1
+convertdate==2.4.0
+crashtest==0.3.1
+cryptography==36.0.1
+cycler==0.11.0
+debugpy==1.6.3
+decorator==5.1.1
+defusedxml==0.7.1
+dill==0.3.5.1
+distlib==0.3.5
+entrypoints==0.4
+epigraphhub==1.1.1
+executing==1.0.0
+fastjsonschema==2.16.1
+fastprogress==1.0.3
+filelock==3.8.0
+Fiona==1.8.21
+flatbuffers==22.9.24
+fonttools==4.29.1
+formulaic==0.3.4
+future==0.18.2
+gast==0.4.0
+GeoAlchemy2==0.10.2
+geopandas==0.10.2
+gluonts==0.9.1
+google-auth==2.12.0
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+greenlet==1.1.3
+grpcio==1.49.1
+h5py==3.7.0
+hijri-converter==2.2.3
+holidays==0.13
+html5lib==1.1
+idna==3.3
+importlib-metadata==4.12.0
+interface-meta==1.3.0
+ipykernel==6.15.2
+ipython==8.4.0
+ipython-genutils==0.2.0
+ipywidgets==8.0.1
+jaraco.classes==3.2.2
+jedi==0.18.1
+Jinja2==3.1.2
+joblib==1.2.0
+jsonschema==4.15.0
+jupyter==1.0.0
+jupyter_client==7.3.5
+jupyter-console==6.4.4
+jupyter-core==4.11.1
+jupyterlab-pygments==0.2.2
+jupyterlab-widgets==3.0.2
+keras==2.10.0
+Keras-Preprocessing==1.1.2
+keyring==23.9.3
+kiwisolver==1.3.2
+korean-lunar-calendar==0.2.1
+libclang==14.0.6
+libmambapy==0.21.0
+lifelines==0.27.3
+lockfile==0.12.2
+lxml==4.9.1
+mamba==0.21.0
+Markdown==3.4.1
+MarkupSafe==2.1.1
+matplotlib==3.5.1
+matplotlib-inline==0.1.6
+mistune==2.0.4
+more-itertools==8.14.0
+msgpack==1.0.4
+munch==2.5.0
+nbclient==0.6.7
+nbconvert==7.0.0
+nbformat==5.4.0
+nest-asyncio==1.5.5
+netCDF4==1.6.0
+ngboost-release==0.3.12.post2
+notebook==6.4.12
+numpy==1.20.3
+oauthlib==3.2.1
+opt-einsum==3.3.0
+packaging==21.3
+pandas==1.4.1
+pandaSDMX==1.9.0
+pandocfilters==1.5.0
+paramiko==2.11.0
+parso==0.8.3
+pastel==0.2.1
+patsy==0.5.2
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.0.1
+pip==22.0.3
+pkginfo==1.8.3
+platformdirs==2.5.2
+plotly==5.10.0
+poetry==1.1.15
+poetry-core==1.0.8
+prometheus-client==0.14.1
+prompt-toolkit==3.0.31
+protobuf==3.19.5
+psutil==5.9.1
+psycopg2-binary==2.9.3
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycosat==0.6.3
+pycparser==2.21
+pydantic==1.9.0
+Pygments==2.13.0
+pylev==1.4.0
+pymc3==3.11.4
+PyMeeus==0.5.11
+PyNaCl==1.5.0
+pyOpenSSL==22.0.0
+pyparsing==3.0.9
+pyproj==3.3.1
+pyrsistent==0.18.1
+PySocks==1.7.1
+python-dateutil==2.8.2
+pytrends==4.8.0
+pytz==2021.3
+PyYAML==6.0
+pyzmq==23.2.1
+qtconsole==5.3.2
+QtPy==2.2.0
+rasterio==1.3.2
+requests==2.27.1
+requests-oauthlib==1.3.1
+requests-toolbelt==0.9.1
+rich==11.2.0
+rioxarray==0.10.3
+rsa==4.9
+ruamel-yaml-conda==0.15.80
+scikit-learn==1.1.2
+scipy==1.9.1
+semver==2.13.0
+Send2Trash==1.8.0
+setuptools==60.8.1
+Shapely==1.8.4
+shellingham==1.5.0
+six==1.16.0
+snuggs==1.4.7
+soupsieve==2.3.2.post1
+SQLAlchemy==1.4.40
+sshtunnel==0.4.0
+stack-data==0.5.0
+tabulate==0.8.10
+tenacity==8.0.1
+tensorboard==2.10.1
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.10.0
+tensorflow-estimator==2.10.0
+tensorflow-io-gcs-filesystem==0.27.0
+termcolor==2.0.1
+terminado==0.15.0
+Theano-PyMC==1.1.2
+threadpoolctl==3.1.0
+tinycss2==1.1.1
+tomlkit==0.11.5
+toolz==0.11.2
+tornado==6.2
+tqdm==4.62.3
+traitlets==5.3.0
+typer==0.4.2
+typing-extensions==3.10.0.2
+urllib3==1.26.8
+virtualenv==20.16.5
+wbgapi==1.0.7
+wcwidth==0.2.5
+webencodings==0.5.1
+Werkzeug==2.2.2
+wget==3.2
+wheel==0.37.1
+widgetsnbextension==4.0.2
+wrapt==1.14.1
+xarray==2022.6.0
+zipp==3.8.1
