--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,14 @@ description = "Dashboard with analysis of covid-19 data from foph in Switzerland
 authors = ["Eduardo Correa Araujo <eduardocorreaaraujo8@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.9, !=3.9.7"
 matplotlib = "^3.6.0"
 arviz = "^0.12.1"
+streamlit = "^1.13.0"
+seaborn = "^0.12.0"
+plotly = "^5.10.0"
+bokeh = "^2.4.3"
+geopandas = "^0.11.1"
 
 [tool.poetry.dev-dependencies]
 
