--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,7 +1,9 @@
 version: "3.9"
 services:
   streamlit-app:
-    build: .
+    build:
+      context: ".."
+      dockerfile: docker/Dockerfile
     ports:
       - "8501:8501"
     volumes:
